Fixed footer showing too high up

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ h1{
 #starters_image_div > img{
         border: 4px black solid;
         outline: 4px blue solid;
-        
 }
 
 img{
@@ -27,7 +26,6 @@ img{
 
 #bulbasaur_container{
     padding: 50px;
-
     background-color: rgba(0, 255, 0, 0.507);
     border: 3px yellow solid;
     border-radius: 20px;
@@ -35,7 +33,6 @@ img{
 
 #charmander_container{
     padding: 50px;
-
     background-color: rgba(255, 166, 0, 0.425);
     border: 3px yellow solid;
     border-radius: 20px;
@@ -43,7 +40,7 @@ img{
 
 #squirtle_container{
     padding: 50px;
-
+    margin-bottom: 150px;
     background-color: rgba(87, 253, 253, 0.651);
     border: 3px yellow solid;
     border-radius: 20px;
